--- a/src/components/Accordion/accordion-item.css
+++ b/src/components/Accordion/accordion-item.css
@@ -5,24 +5,24 @@
     --accordion-item-font-weight: 700;
     --accordion-item-line-height: 2rem;
     /** NEW in 3.0.0 */
-    --accordion-item-btn-color: var(--sgds-body-color);
-    --accordion-item-btn-border-radius: calc(var(--sgds-border-radius) - var(--sgds-border-width));
-    --accordion-item-btn-bg: var(--accordion-bg);
-    --accordion-item-btn-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var(--sgds-body-color)'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
-    --accordion-item-btn-icon-width: 1.25rem;
-    --accordion-item-btn-icon-transform: rotate(-180deg);
-    --accordion-item-btn-icon-transition: transform 0.2s ease-in-out;
-    /* --accordion-item-btn-active-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var(--sgds-primary-text-emphasis)'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E"); */
-    --accordion-item-btn-focus-border-color: #90b5ff;
-    --accordion-item-btn-focus-box-shadow: 0 0 0 0.25rem rgba(90, 66, 192, 0.25);
+    --accordion-item-button-color: var(--sgds-body-color);
+    --accordion-item-button-border-radius: calc(var(--sgds-border-radius) - var(--sgds-border-width));
+    --accordion-item-button-bg: var(--accordion-bg);
+    --accordion-item-button-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var(--sgds-body-color)'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+    --accordion-item-button-icon-width: 1.25rem;
+    --accordion-item-button-icon-transform: rotate(-180deg);
+    --accordion-item-button-icon-transition: transform 0.2s ease-in-out;
+    /* --accordion-item-button-active-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var(--sgds-primary-text-emphasis)'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E"); */
+    --accordion-item-button-focus-border-color: #90b5ff;
+    --accordion-item-button-focus-box-shadow: 0 0 0 0.25rem rgba(90, 66, 192, 0.25);
     --accordion-item-content-color: var(--sgds-body-color);
   }
   .accordion-button {
     align-items: center;
-    background-color: var(--accordion-item-btn-bg);
+    background-color: var(--accordion-item-button-bg);
     border: 0;
     border-radius: 0;
-    color: var(--accordion-item-btn-color);
+    color: var(--accordion-item-button-color);
     display: flex;
     font-size: 1rem;
     overflow-anchor: none;
@@ -33,7 +33,7 @@
     width: 100%;
   }
   .accordion-button.collapsed {
-    border-radius: var(--accordion-item-btn-border-radius);
+    border-radius: var(--accordion-item-button-border-radius);
   }
   @media (prefers-reduced-motion: reduce) {
     .accordion-button {
@@ -46,19 +46,19 @@
     color: var(--accordion-active-color);
   }
   .accordion-button:not(.collapsed):after {
-    /* background-image: var(--accordion-item-btn-active-icon); */
-    transform: var(--accordion-item-btn-icon-transform);
+    /* background-image: var(--accordion-item-button-active-icon); */
+    transform: var(--accordion-item-button-icon-transform);
   }
   .accordion-button:after {
-    background-image: var(--accordion-item-btn-icon);
+    background-image: var(--accordion-item-button-icon);
     background-repeat: no-repeat;
-    background-size: var(--accordion-item-btn-icon-width);
+    background-size: var(--accordion-item-button-icon-width);
     content: "";
     flex-shrink: 0;
-    height: var(--accordion-item-btn-icon-width);
+    height: var(--accordion-item-button-icon-width);
     margin-left: auto;
-    transition: var(--accordion-item-btn-icon-transition);
-    width: var(--accordion-item-btn-icon-width);
+    transition: var(--accordion-item-button-icon-transition);
+    width: var(--accordion-item-button-icon-width);
   }
   @media (prefers-reduced-motion: reduce) {
     .accordion-button:after {
@@ -69,8 +69,8 @@
     z-index: 2;
   }
   .accordion-button:focus {
-    border-color: var(--accordion-item-btn-focus-border-color);
-    box-shadow: var(--accordion-item-btn-focus-box-shadow);
+    border-color: var(--accordion-item-button-focus-border-color);
+    box-shadow: var(--accordion-item-button-focus-box-shadow);
     outline: 0;
     z-index: 3;
   }
@@ -99,13 +99,13 @@
     border-radius: 0;
   }
   [data-bs-theme="dark"] .accordion-button:after {
-    --accordion-item-btn-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23D2D2D2'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
-    --accordion-item-btn-active-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23D2D2D2'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+    --accordion-item-button-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23D2D2D2'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+    --accordion-item-button-active-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23D2D2D2'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
   } */
   .accordion-item {
     background-color: var(--accordion-bg);
     border: var(--accordion-border-width) solid var(--accordion-border-color);
-    color: var(--accordion-color);
+    color: var(--accordion-item-content-color);
     border-radius: var(--accordion-item-border-radius) var(--accordion-item-border-radius);
   }
   /* .accordion-item:first-of-type .accordion-button {
@@ -132,8 +132,8 @@
   :host([first-of-type]) .accordion-item {
     border-radius: var(--accordion-item-border-radius) var(--accordion-item-border-radius) 0 0;
     .accordion-button {
-      border-top-left-radius: var(--accordion-item-btn-border-radius);
-      border-top-right-radius: var(--accordion-item-btn-border-radius);
+      border-top-left-radius: var(--accordion-item-button-border-radius);
+      border-top-right-radius: var(--accordion-item-button-border-radius);
     }
   }
   :host([nth-of-type]) .accordion-item {
@@ -148,8 +148,8 @@
     border-radius: 0 0 var(--accordion-item-border-radius) var(--accordion-item-border-radius);
     border-top: 0;
     .accordion-button.collapsed {
-      border-bottom-left-radius: var(--accordion-item-btn-border-radius);
-      border-bottom-right-radius: var(--accordion-item-btn-border-radius);
+      border-bottom-left-radius: var(--accordion-item-button-border-radius);
+      border-bottom-right-radius: var(--accordion-item-button-border-radius);
     }
   }
 
