--- a/src/components/ActionCard/action-card.css
+++ b/src/components/ActionCard/action-card.css
@@ -1,82 +1,32 @@
 :host {
-    .sgds {
-      &.card {
-        &[variant*="card-action"] {
-          .card-body {
-            ::slotted(svg) {
-              margin-right: 1rem;
-            }
-          }
-        }
-      }
-    }
-  }
+  /* NEW in 2.0 */
+  --action-card-border-active-box-shadow: var(--sgds-box-shadow), inset 0 0 0 2.1px var(--sgds-link-hover-color);
+  --action-card-transition-duration: 0.3s;
+  /* override the default value from card */
+  --card-title-spacer-y: 0;
+}
 
-  .sgds.card[variant*="card-action"] {
-    transition-duration: 0.3s;
-    transition-property: box-shadow, border-color;
-    transition-timing-function: ease-in-out;
-  }
-  .sgds.card[variant*="card-action"] .card-body {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-  .sgds.card[variant*="card-action"] .card-body i {
-    font-size: 1.5rem;
-    margin-right: 1rem;
-  }
-  .sgds.card[variant*="card-action"] .card-body > * {
-    margin-bottom: 0;
-  }
-  .sgds.card[variant*="card-action"].is-active,
-  .sgds.card[variant*="card-action"]:hover {
-    border-color: transparent;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15), inset 0 0 0 2.1px #0950df;
-  }
-  .sgds.card[variant*="card-action"] .card-subtitle {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-  }
-  .sgds.card[variant*="card-action"] .card-subtitle div {
-    align-items: center;
-    display: flex;
-  }
-  .sgds.card[variant*="card-action"] .card-input input.form-check-input {
-    margin-top: 0;
-    min-height: 1.5rem;
-    min-width: 1.5rem;
-  }
-  .sgds.card[variant="card-action-quantity-toggle"] .card-body {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-  }
-  .sgds.card[variant="card-action-quantity-toggle"] div:not([class]) {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-  }
-  .sgds.card[variant="card-action-quantity-toggle"] div:not([class]) .btn,
-  .sgds.card[variant="card-action-quantity-toggle"] div:not([class]) .input-group {
-    margin-top: 0;
-  }
-  .sgds.card[variant="card-action-quantity-toggle"] div:not([class]) .input-group .btn i {
-    margin-right: 0;
-  }
-  .sgds.card[variant="card-action-quantity-toggle"] div:not([class]) .input-group button,
-  .sgds.card[variant="card-action-quantity-toggle"] div:not([class]) .input-group input {
-    margin-top: 0;
-  }
-  .sgds.card[variant="card-action-quantity-toggle"] div:not([class]) .card-unit {
-    flex-basis: 150%;
-  }
-  @media (max-width: 500px) {
-    .sgds.card[variant="card-action-quantity-toggle"] div:not([class]):last-child {
-      display: block;
-    }
-    .sgds.card[variant="card-action-quantity-toggle"] div:not([class]):last-child div.card-unit {
-      margin-bottom: 1rem;
-    }
-  }
+.sgds.card[variant*="card-action"] {
+  transition-duration: var(--action-card-transition-duration);
+  transition-property: box-shadow, border-color;
+  transition-timing-function: ease-in-out;
+}
+ .card-body {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+slot[name="icon"]::slotted(*){
+  margin-right: 1rem;
+}
+.sgds.card[variant*="card-action"].is-active,
+.sgds.card[variant*="card-action"]:hover {
+  border-color: transparent;
+  box-shadow: var(--action-card-border-active-box-shadow);
+}
+.sgds.card[variant*="card-action"] .card-subtitle {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
