--- a/src/styles/bg-variants.css
+++ b/src/styles/bg-variants.css
@@ -1,34 +1,24 @@
 .bg-primary {
-  --sgds-bg-opacity: 1;
-  background-color: rgba(var(--sgds-primary-rgb), var(--sgds-bg-opacity)) !important;
+  background-color: var(--sgds-primary) !important;
 }
 .bg-secondary {
-  --sgds-bg-opacity: 1;
-  background-color: rgba(var(--sgds-secondary-rgb), var(--sgds-bg-opacity)) !important;
+  background-color: var(--sgds-secondary) !important;
 }
 .bg-success {
-  --sgds-bg-opacity: 1;
-  background-color: rgba(var(--sgds-success-rgb), var(--sgds-bg-opacity)) !important;
+  background-color: var(--sgds-success) !important;
 }
 .bg-info {
-  --sgds-bg-opacity: 1;
-  background-color: rgba(var(--sgds-info-rgb), var(--sgds-bg-opacity)) !important;
+  background-color: var(--sgds-info) !important;
 }
 .bg-warning {
-  --sgds-bg-opacity: 1;
-  background-color: rgba(var(--sgds-warning-rgb), var(--sgds-bg-opacity)) !important;
+  background-color: var(--sgds-warning) !important;
 }
 .bg-danger {
-  --sgds-bg-opacity: 1;
-  background-color: rgba(var(--sgds-danger-rgb), var(--sgds-bg-opacity)) !important;
+  background-color: var(--sgds-danger)!important;
 }
 .bg-light {
-  background-color: rgba(var(--sgds-light-rgb), var(--sgds-bg-opacity)) !important;
-}
-.bg-dark,
-.bg-light {
-  --sgds-bg-opacity: 1;
+  background-color: var(--sgds-light) !important;
 }
 .bg-dark {
-  background-color: rgba(var(--sgds-dark-rgb), var(--sgds-bg-opacity)) !important;
+  background-color:var(--sgds-dark) !important;
 }
