--- a/src/base/sgds-element.css
+++ b/src/base/sgds-element.css
@@ -39,12 +39,12 @@
   }
 
   /* Globally style slotted anchor tags */
-  ::slotted(a){
+  a, ::slotted(a){
     color: var(--sgds-link-color);
     text-decoration: var(--sgds-link-decoration);
    
   }
-  ::slotted(a:hover){
+  a:hover, ::slotted(a:hover){
     color: var(--sgds-link-hover-color);
   } 
 }
