feat(accordion): allow accordion active color customisation through new cssprop

--- a/src/components/Accordion/sgds-accordion-item.scss
+++ b/src/components/Accordion/sgds-accordion-item.scss
@@ -19,6 +19,9 @@
 
 .accordion-button {
   line-height: var(--accordion-item-line-height);
+  &:not(.collapsed){
+    color: var(--accordion-active-color);
+  }
 }
 
 .accordion-button:not(.collapsed) {
