refactor(mainnav, mainnavitem, mainnavdropdown): replacement of camelCase to kebab case in cssprop
BREAKING CHANGE: --mainnav-borderBottom-width is replaced with --mainnav-border-bottom width for
example.

--- a/root.css
+++ b/root.css
@@ -165,6 +165,7 @@
 
   --sgds-input-btn-focus-width: 0.13rem;
   --sgds-color-disabled: #939393;
+  --sgds-disabled-opacity: 0.5;
 }
 /* [data-bs-theme="dark"] {
   --sgds-body-color: #d2d2d2;
