--- a/src/components/Mainnav/mainnav.css
+++ b/src/components/Mainnav/mainnav.css
@@ -4,8 +4,8 @@
     --mainnav-padding-y: 0;
     --mainnav-mobile-padding-x: 0.5rem;
     --mainnav-mobile-padding-y: 0;
-    --mainnav-borderBottom-width: 1px;
-    --mainnav-borderBottom-color: #98a2b3;
+    --mainnav-border-bottom-width: 1px;
+    --mainnav-border-bottom-color: #98a2b3;
     /** NEW in 2.0.0 */
     --mainnav-toggler-icon-bg: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16" ><path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" /></svg>');
     --mainnav-toggler-padding-y: 0.25rem;
@@ -19,6 +19,9 @@
     --mainnav-brand-hover-color: rgba(var(--sgds-emphasis-color-rgb), 0.9);
 
     --mainnav-gutter: 1.5rem;
+    --mainnav-theme-color: var(--sgds-primary);
+    --mainnav-color: var(--sgds-body-color);
+    --mainnav-disabled-opacity: var(--sgds-disabled-opacity);
   }
   .navbar {
     align-items: stretch;
@@ -29,7 +32,7 @@
     position: relative;
     min-height: 80px;
     background-color: var(--mainnav-background-color);
-    border-bottom: var(--mainnav-borderBottom-width) solid var(--mainnav-borderBottom-color);
+    border-bottom: var(--mainnav-border-bottom-width) solid var(--mainnav-border-bottom-color);
     @media (max-width: 768px) {
       padding: var(--mainnav-mobile-padding-y) var(--mainnav-mobile-padding-x);
     }
