--- a/src/base/sgds-element.css
+++ b/src/base/sgds-element.css
@@ -21,7 +21,6 @@
     }
   }
 
-  a[target="_blank"]::after,
   ::slotted(a[target="_blank"])::after {
     background-color: currentColor;
     display: inline-block;
@@ -39,12 +38,12 @@
   }
 
   /* Globally style slotted anchor tags */
-  a, ::slotted(a){
+  ::slotted(a){
     color: var(--sgds-link-color);
     text-decoration: var(--sgds-link-decoration);
    
   }
-  a:hover, ::slotted(a:hover){
+  ::slotted(a:hover){
     color: var(--sgds-link-hover-color);
   } 
 }
