--- a/src/components/Alert/alert-link.css
+++ b/src/components/Alert/alert-link.css
@@ -1,10 +1,10 @@
 @import "../../styles/anchor.css";
 
-  :host {
-    --alert-link-anchor-color: var(--sgds-alert-link-color, #2a3343);
-  }
-  .alert-link {
-    color: var(--alert-link-anchor-color);
-    font-weight: 700;
-  }
+:host {
+  display: inline-block;
+}
 
+.alert-link, .alert-link:hover {
+  color: var(--alert-link-color);
+  font-weight: 700;
+}
